--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <title>Kevin Milack</title>
   </head>
   <body>
+    <div class="wrapper">
     <div class="container">
       <div class="words">
         <h1>Kevin Milacki</h1>
         <p>there will be something here at some point.</p>
       </div>
     </div>
+    </div>
+   
   </body>
 </html>
