--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
     <title>Kevin Milack</title>
   </head>
   <body>
+   
     <div class="wrapper">
     <div class="container">
       <div class="words">
         <h1>Kevin Milacki</h1>
-        <p>there will be something here at some point.</p>
+       
+       <ul>
+        <li>Photography</li>
+        <li>Stories</li>
+        <li>Coding Projects</li>
+
+       </ul>
       </div>
     </div>
     </div>
-   
+    <!-- <div class="logo">
+      <img src="SVG/sig20.svg" height="100" width="300" />
+      </div> -->
   </body>
 </html>
