--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h1>Kevin Milacki</h1>
        
        <ul>
-        <li>Photography</li>
-        <li>Stories</li>
-        <li>Coding Projects</li>
+        <li><a href="photo/index.html">Photography</a></li>
+        <li><a href="stories/index.html">Stories</a></li>
+        <li><a href="code/index.html">Coding Projects</a></li>
 
        </ul>
       </div>
