--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Kevin Milacki</h1>
        
        <ul>
-        <li><a href="photo/index.html">Photography</a></li>
+        <li><a href="photography/index.html">Photography</a></li>
         <li><a href="stories/index.html">Stories</a></li>
         <li><a href="code/index.html">Coding Projects</a></li>
 
