reduced jpeg size and altered css

--- a/photography/abstract/index.html
+++ b/photography/abstract/index.html
@@ -11,10 +11,10 @@
 <body class="body">
   <header>
     <div class="head-container">
-      <p>Image Gallery</p>
+      <p>Abstract and Landscapes</p>
      <!-- <h1>-Food Items-</h1> -->
      <ul>
-      <li>Home</li>
+      <li><a href="../../index.html">Home</a></li>
       <li>Photography</li>
       <li>Stories</li>
       <li>Coding Projects</li>
