Added Photgraphy page and No Recess gallery

--- a/photography/index.html
+++ b/photography/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phgotography</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <a href="abstract/index.html">Abstract</a>
+    <header>
+        <div class="head-container">
+          <p>Photography</p>
+         <!-- <h1>-Food Items-</h1> -->
+         <ul>
+          <li><a href="../../index.html">Home</a></li>
+          <li>Photography</li>
+          <li>Stories</li>
+          <li>Coding Projects</li>
+         </ul>
+        </div>
+      </header>
+
+
+  <div class="card abstract"> 
+     <a href="abstract/index.html"><p>Abstracts and Landscapes</p></a>
+  </div>
+
+  <div class="card norecess"> 
+    <a href="norecess/index.html"><p>No Recess</p></a>
+ </div>
+      
 </body>
+
 </html>
