--- a/photography/abstract/index.html
+++ b/photography/abstract/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <script src="index.js" defer></script>
-    <title>Picutre Slider</title>
+    <title>Abstracts and Landscapes</title>
 
 </head>
 <body class="body">
@@ -15,7 +15,7 @@
      <!-- <h1>-Food Items-</h1> -->
      <ul>
       <li><a href="../../index.html">Home</a></li>
-      <li>Photography</li>
+      <li><a href="../index.html">Photography</a></li>
       <li>Stories</li>
       <li>Coding Projects</li>
      </ul>
