--- a/photography/norecess/index.html
+++ b/photography/norecess/index.html
@@ -50,6 +50,8 @@
     <img src="img/Norecess-24.jpg">
     <img src="img/Norecess-25.jpg">
     <img src="img/Norecess-26.jpg">
+    <img src="img/Norecess-27.jpg">
+
 
 
     </div>    
