added content and cleaned up code

--- a/photography/index.html
+++ b/photography/index.html
@@ -27,7 +27,11 @@
 
   <div class="card norecess"> 
     <a href="norecess/index.html"><p>No Recess</p></a>
- </div>
+  </div>
+
+  <div class="card mystical">
+    <a href="mystical/index.html"><p>Mystical</p></a>
+  </div>
       
 </body>
 
