--- a/photography/mystical/index.html
+++ b/photography/mystical/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../scripts/main.css">
     <script src="../scripts/index.js" defer></script>
-    <title>Abstracts and Landscapes</title>
+    <title>Mystical</title>
 
 </head>
 <body class="body">
   <header>
     <div class="head-container">
-      <p>Abstract and Landscapes</p>
+      <p>Mystical</p>
      <!-- <h1>-Food Items-</h1> -->
      <ul>
       <li><a href="../../index.html">Home</a></li>
@@ -24,23 +24,14 @@
   <div class="container"> 
  <div class="wrapper">
     <div id="photoGrid" class="slides">
-    <img src="img/abstract-1.jpg" >
-    <img src="img/abstract-2.jpg" >
-    <img src="img/abstract-3.jpg" >
-    <img src="img/abstract-4.jpg" >
-    <img src="img/abstract-5.jpg" >
-    <img src="img/abstract-6.jpg" >
-    <img src="img/abstract-7.jpg" >
-    <img src="img/abstract-8.jpg" >
-    <img src="img/abstract-9.jpg" >
-    <img src="img/abstract-10.jpg">
-    <img src="img/abstract-11.jpg">
-    <img src="img/abstract-12.jpg">
-    <img src="img/abstract-13.jpg">
-    <img src="img/abstract-14.jpg">
-    <img src="img/abstract-15.jpg">
-    <img src="img/abstract-16.jpg">
-    <img src="img/abstract-17.jpg">
+    <img src="img/Mystical-1.jpg" >
+    <img src="img/Mystical-2.jpg" >
+    <img src="img/Mystical-3.jpg" >
+    <img src="img/Mystical-4.jpg" >
+    <img src="img/Mystical-5.jpg" >
+    <img src="img/Mystical-6.jpg" >
+    <img src="img/Mystical-7.jpg" >
+   
     </div>    
 </div>
   <div class="modalContainer">
