--- a/photography/norecess/index.html
+++ b/photography/norecess/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="../scripts/main.css">
+    <script src="../scripts/index.js" defer></script>
     <title>No Recess</title>
 
 </head>
